<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vtc.project.instanthelper.android.FragmentProfile" >

    <TextView
        android:id="@+id/profile_label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_label_name" />

    <EditText
        android:id="@+id/profile_data_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>
    <TextView
        android:id="@+id/profile_label_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_label_person" />

    <EditText
        android:id="@+id/profile_data_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>
        <TextView
        android:id="@+id/profile_label_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_label_phone" />

    <EditText
        android:id="@+id/profile_data_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>
        <TextView
        android:id="@+id/profile_label_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_label_address" />

    <EditText
        android:id="@+id/profile_data_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/profile_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_submit" />

</LinearLayout>
