<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vtc.project.instanthelper.android.FragmentContact" >

    <TextView
        android:id="@+id/contact_title_backgroud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bg"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/contact_title_backgroud"
        android:textSize="18dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/contact_panel_backgroud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:padding="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/contact_company_backgroud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_company_backgroud" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/contact_title_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bg"
        android:clickable="true"
                android:padding="10dp"
        android:text="@string/contact_title_contact"
        android:textSize="18dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/contact_panel_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border"
        android:padding="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/contact_name" />

        <EditText
            android:id="@+id/contact_name_data"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/contact_email" />

        <EditText
            android:id="@+id/contact_email_data"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/contact_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/contact_message" />

        <EditText
            android:id="@+id/contact_message_data"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.20"
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="text|textMultiLine"
            android:maxLength="254"
            android:minLines="10"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/contact_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_submit" />
    </LinearLayout>

</LinearLayout>