<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="250dp" >

        <ViewFlipper
            android:id="@+id/view_flipper"
            android:layout_width="fill_parent"
            android:layout_height="250dp" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/slide1" />

                <TextView
                    style="@style/ImageTitle"
                    android:text="@string/desc_slide1" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/slide2" />

                <TextView
                    style="@style/ImageTitle"
                    android:text="@string/desc_slide2" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/slide3" />

                <TextView
                    style="@style/ImageTitle"
                    android:text="@string/desc_slide3" />
            </RelativeLayout>
        </ViewFlipper>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#ffcccccc" />

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button_air"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_column="0"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="18dp"
                    android:layout_row="0"
                    android:background="@drawable/air" />

                <TextView
                    android:id="@+id/desc_air"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="left"
                    android:layout_row="0"
                    android:labelFor="@id/button_air"
                    android:text="@string/desc_air" />

                <Button
                    android:id="@+id/button_fire"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_column="0"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="18dp"
                    android:layout_row="1"
                    android:background="@drawable/fire" />

                <TextView
                    android:id="@+id/desc_fire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="left"
                    android:layout_row="1"
                    android:labelFor="@id/button_fire"
                    android:text="@string/desc_fire" />

                <Button
                    android:id="@+id/button_water"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_column="0"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="18dp"
                    android:layout_row="2"
                    android:background="@drawable/water" />

                <TextView
                    android:id="@+id/desc_water"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="left"
                    android:layout_row="2"
                    android:labelFor="@id/button_water"
                    android:text="@string/desc_water" />

                <Button
                    android:id="@+id/button_electric"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_column="0"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="18dp"
                    android:layout_row="3"
                    android:background="@drawable/electric" />

                <TextView
                    android:id="@+id/desc_electric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="left"
                    android:layout_row="3"
                    android:labelFor="@id/button_electric"
                    android:text="@string/desc_electric" />

            </GridLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="#ffcccccc" />

            <TextView
                android:id="@+id/desc_first"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_first" 
                android:layout_margin="10dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="#ffcccccc" />

            <TextView
                android:id="@+id/desc_second"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_second" 
                 android:layout_margin="10dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="#ffcccccc" />

            <TextView
                android:id="@+id/desc_third"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_third" 
                 android:layout_margin="10dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>